[tool.poetry]
name = "clendenen_dj"
version = "0.1.0"
description = ""
authors = ["Elijah Christensen <ejd.christensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
