[tool.poetry]
name = "clendenen_dj"
version = "0.3.0"
description = ""
authors = ["Elijah Christensen <ejd.christensen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pyarrow = "^4.0.0"
pandas = "1.1.5"
jedi = "<=0.15.1"
datajoint = "^0.13.2"
tableone = "^0.7.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "<8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
